# rust-nodejs-ffi

./: .gitignore  README.md
node-part/: index.js  package-lock.json  package.json
rust-part/: Cargo.toml  star_wars_planets.csv
rust-part/src/: lib.rs  main.rs
