[package]
name = "rust-part"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_part"
crate-type=["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
